# dynamic_skill_injection

./: .gitignore  README.md
dsi_action_server/: CMakeLists.txt  package.xml  setup.py
dsi_action_server/config/: configs.json  methodlib.json  prelim.json
dsi_action_server/nodes/: action_server_node.py  test_node.py
dsi_action_server/scripts/: first_action.py  test_action_service.py
dsi_action_server/srv/: action_service.srv
dsi_failure_recognition/: CMakeLists.txt  package.xml  setup.py
dsi_failure_recognition/deprecated/: mock_failure_recognition.py
dsi_gazebo/: CMakeLists.txt  package.xml
dsi_gazebo/buildings/RGB_room/: model.config  model.sdf
dsi_gazebo/launch/: mock_failure_notification.launch  movo_moveit.launch  movo_sim.launch  movo_test_zone.launch
dsi_gazebo/models/blue_5m_room/blue_5m_room/: model.config  model.sdf
dsi_gazebo/models/hinged_door/: model.sdf
dsi_gazebo/models/red_5m_room/red_5m_room/: model.config  model.sdf
dsi_gazebo/models/three_room/: model.config  model.sdf
dsi_gazebo/scripts/: keep_upright.py
dsi_gazebo/worlds/: first_world.world  test1.sdf  test2.sdf  test3.sdf  test_zone.sdf
dsi_human_gui/: CMakeLists.txt  package.xml  plugin.xml
dsi_launcher/: CMakeLists.txt  package.xml
dsi_task_planning/: CMakeLists.txt  package.xml  setup.py
dsi_world_state/: CMakeLists.txt  package.xml  setup.py
dynamic_skill_injection/: CMakeLists.txt  package.xml  setup.py
dynamic_skill_injection_msgs/: CMakeLists.txt  package.xml
task_planning/: CMakeLists.txt  package.xml
world_state/: CMakeLists.txt  package.xml
(+48 files in other folders)
