<?xml version="2.0"?>
<package format="2">
  <name>dsi_gazebo</name>
  <version>1.0.0</version>
  <description>
      Gazebo wrapper for the movo platform with Kinova Arms.
  </description>

  <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
  <author></author>
  <url type="website">https://github.com/Kinovarobotics</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dsi_failure_recognition</depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>



  <export>
  </export>
</package>
